syntax = "proto3";

package event;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Events {
  rpc Create(CreateOrUpdateEventRequest) returns (EmptyResponse) {}
  rpc Get(GetEventRequest) returns (Event) {}
  rpc Update(CreateOrUpdateEventRequest) returns (EmptyResponse) {}
  rpc Delete(DeleteEventRequest) returns (EmptyResponse) {}
  rpc ListEvents(EmptyRequest) returns (EventListResponse) {}
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  optional string description = 5;
  string owner_id = 6;
  optional google.protobuf.Duration notify_before = 7;
}

message CreateOrUpdateEventRequest {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  optional string description = 5;
  string owner_id = 6;
  optional google.protobuf.Duration notify_before = 7;
}

message DeleteEventRequest { string id = 1; }
message GetEventRequest { string id = 1; }

message EventListResponse {
  repeated Event events = 1;
}

message EmptyRequest {}
message EmptyResponse {}